第二次上传  新增 mock和logger模块

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,8 @@
 
     <modules>
         <module>gmall0826-common</module>
+        <module>gmall-mock</module>
+        <module>gmall0826-mock</module>
     </modules>
 
 
