--- a/gmall0826-logger/pom.xml
+++ b/gmall0826-logger/pom.xml
@@ -2,16 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <!--<parent>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
+        <!--<version>2.1.12.RELEASE</version>-->
+        <!--<relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
+    <!--</parent>-->
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.12.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>gmall0826-parent</artifactId>
+        <groupId>com.atguigu.gmall0826-parent</groupId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
+
     <groupId>com.atguigu.gmall0826</groupId>
-    <artifactId>gmall0826-logger</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>gmall0826-logger</name>
+        <artifactId>gmall0826-logger</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+        <name>gmall0826-logger</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -43,7 +49,37 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.47</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j</artifactId>
+            <version>1.3.8.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.atguigu.gmall0826-parent</groupId>
+            <artifactId>gmall0826-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
