--- a/gmall0826-mock/pom.xml
+++ b/gmall0826-mock/pom.xml
@@ -13,8 +13,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>gmall0826-common</groupId>
-            <artifactId></artifactId>
+            <groupId>com.atguigu.gmall0826-parent</groupId>
+            <artifactId>gmall0826-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
