--- a/gmall0826-mock/pom.xml
+++ b/gmall0826-mock/pom.xml
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.atguigu.gmall0826-parent</groupId>
+            <groupId>com.atguigu.gmall0826</groupId>
             <artifactId>gmall0826-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
